Isabella Isaksson TE18C

--- a/Tron/övning1.6a.html
+++ b/Tron/övning1.6a.html
@@ -23,6 +23,17 @@
 
             }
 
+            currentRadius = 0;
+            while(currentRadius <= 200){
+                line(700, 700, 2, "black");
+
+                line(700, 800, 2, "black");
+                currentRadius += 5;
+
+            }
+
+           
+
         }
 
         
